Polish Collection field initialization in @ConfigurationProperties classes
1. avoid adding elements to immutable Collection, see https://github.com/spring-projects/spring-boot/blob/91da8c56a2bdcb54d0ae9b2e696d45a3d2819f96/spring-boot-project/spring-boot/src/main/java/org/springframework/boot/context/properties/bind/CollectionBinder.java#L66-L68
2. use `List.of()` instead of `Arrays.asList()`

Signed-off-by: Yanming Zhou <zhouyanming@gmail.com>